--- a/classla-grpc/pyproject.toml
+++ b/classla-grpc/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["aljazerzen <aljaz.erzen@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "3.8.6"
 grpcio = "^1.46.3"
 
 [tool.poetry.dev-dependencies]
