--- a/classla-grpc/pyproject.toml
+++ b/classla-grpc/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["aljazerzen <aljaz.erzen@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "3.8.6"
+python = "~3.8"
 grpcio = "^1.46.3"
+classla = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
